Bug 36722 - New line separator for footnote does not allow a "zero thickness" line
Summary: New line separator for footnote does not allow a "zero thickness" line
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.0 Beta3
Hardware: All All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0 unitTestNotes:9
Keywords:
: 50605 63462 (view as bug list)
Depends on:
Blocks: Footnote-Endnote
  Show dependency treegraph
 
Reported: 2011-04-30 13:10 UTC by RGB
Modified: 2025-03-30 10:51 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description RGB 2011-04-30 13:10:44 UTC
The new line separator dialogue on 3.4 beta 3 gives the possibility to select line thickness on steps of 0.25 points, but do not accept a 0 pt line: i.e., it is not possible to set "no line"
Comment 1 RGB 2011-05-01 02:24:58 UTC
OK, I just realized that instead of zero thickness you can use zero length by choosing the line to be 0 % of the page with, so this is not that important after all, just a change on behaviour.
Comment 2 Björn Michaelsen 2011-12-23 12:07:31 UTC Comment hidden (obsolete)
Comment 3 RGB 2011-12-23 17:01:11 UTC
The problem is present on 3.5 beta2.
Comment 4 Owen Genat (retired) 2013-04-13 05:07:37 UTC
*** Bug 63462 has been marked as a duplicate of this bug. ***
Comment 5 Owen Genat (retired) 2013-04-14 01:27:10 UTC
Thanks MJK for setting the Platform to "All". I have now been able to test this with v4.0.2.2 under Ubuntu 10.04 x86_64, MacOS 10.6.8, and Win7HP. All platforms exhibit the behaviour as described in comments #0 and #1. 

Can this bug therefore be closed? It is really just the workflow / behaviour that is different and requires learning.
Comment 6 manj_k 2013-05-27 20:01:24 UTC
*** Bug 50605 has been marked as a duplicate of this bug. ***
Comment 7 Gordo 2015-05-16 19:19:13 UTC
In Format -> Page -> Footnote tab, the Style drop-down has an option for None which does not work.  I know this bug was originally reported to achieve the effect of no separator line but there should be a minimum size for the thickness of the line.

Ideally, Style should appear above Position in the dialogue because the first option should be whether or not you want a line.  If the option for None is chosen then the other fields should be disabled.

Windows Vista 64
Version: 4.4.3.2
Build ID: 88805f81e9fe61362df02b9941de8e38a9b5fd16
Comment 8 Commit Notification 2015-12-12 14:02:40 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8045b87609409c944e3e89e7e11c00822a214512

tdf#36722: Enable footnote separator line style NONE

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Buovjaga 2023-10-18 17:15:21 UTC
Notes for unit test writers:

Revert has to be done manually.
Comment 10 Buovjaga 2025-03-30 10:51:42 UTC
More notes for unit test writers:

LineListBox::GetEntryPos() is gone from svtools/source/control/ctrlbox.cxx and now the job is done by SvtLineListBox::GetSelectEntryStyle()

In sw/source/core/layout/paintfrm.cxx the same SwFootnoteContFrame::PaintLine() remains and the line was changed after 2015 to:

if ( oLineRect->HasArea() && rInf.GetLineStyle() != SvxBorderLineStyle::NONE)