tdf#36722: Enable footnote separator line style NONE

adds detection of css::table::BorderLineStyle::NONE
to the LineListBox and stops painting NONE style lines

Change-Id: Ib24fa25a9e3e3ae685f2000685f01cae42d1653f
Reviewed-on: https://gerrit.libreoffice.org/20639
Reviewed-by: Oliver Specht <oliver.specht@cib.de>
Tested-by: Oliver Specht <oliver.specht@cib.de>